# TPCReco

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md  gdrive_download.sh  requirements_apt.txt  test.txt
Analysis/: CMakeLists.txt  LinkDef.h  README.html  README.md  README_HIGS_ANALYSIS.txt
Analysis/config/: config_rawPedestalAnalysis.json  config_recoEventsAnalysis_8_66MeV_looseCuts.json  config_recoEventsAnalysis_8_66MeV_tightCuts.json  cuts.json
Analysis/examples/: README_HIGS_ANALYSIS.txt  calibration_curve_zenek.C  calibration_curve_zenek2.C  generateFakeRecoEvents.cxx  makeMCPlots.cpp  makePlots.cpp  makePlotsRaw.cxx  makePlotsRawVsReco.cxx  makePlotsReco_mm_scale_bug.cxx  makePlots_HIGS.cpp  makePlots_eventFromTPCgui.cxx  makePlots_report.cpp  makePlots_trackDiffusion.cxx  plotChargeProfile.cxx  runTimeSec.cxx
Analysis/include/: Comp_analysis.h  DiffAnalysis.h  HIGGS_analysis.h  HIGS_trees_analysis.h  HIGS_trees_dataFormat.h  LinkDef.h  Pedestal_analysis.h  RawSignal_tree_analysis.h  RawSignal_tree_dataFormat.h  RecoOutput.h
Analysis/python/: makeTrackTree.py
Analysis/src/: Comp_analysis.cpp  Cuts.cpp  CutsFactory.cpp  DiffAnalysis.cpp  EnergyScale_analysis.cpp  HIGGS_analysis.cpp  HIGS_trees_analysis.cpp  Pedestal_analysis.cpp  RawSignal_tree_analysis.cpp  RecoOutput.cpp  TrackDiffusion_tree_analysis.cpp
Analysis/test/: CMakeLists.txt  CutsFactory_tst.cpp  Cuts_tst.cpp  analyzeRecoEvent.cxx  generateFakeRecoEvents.cxx  makeCalibrationPlots.cpp  makeMCPlots.cpp  makePlots.cpp  makePlotsRaw.cxx  makePlotsRawVsReco.cxx  makePlotsReco_mm_scale_bug.cxx  makePlots_HIGS.cpp  makePlots_report.cpp  plotChargeProfile.cxx  runTimeSec.cxx
DataFormats/: CMakeLists.txt  LinkDef.h
DataFormats/include/: CommonDefinitions.h  EventCharges.h  EventFilter.h  EventHits.h  EventInfo.h  EventInformation.h  EventRaw.h  EventSourceBase.h  EventSourceFactory.h  EventSourceROOT.h  EventTPC.h  Event_Information.h  Event_Strip.h  GeometryStats.h  GeometryTPC.h  Geometry_Strip.h  Hit2D.h  LinkDef.h  MultiKey.h  PEventTPC.h  PedestalCalculator.h  SigClusterTPC.h  StripTPC.h  Track3D.h  TrackSegment2D.h  TrackSegment3D.h  TrackSegmentTPC.h  dataEventTPC.h
DataFormats/src/: CommonDefinitions.cpp  EventCharges.cpp  EventFilter.cpp  EventHits.cpp  EventInfo.cpp  EventRaw.cpp  EventSourceBase.cpp  EventSourceFactory.cpp  EventSourceROOT.cpp  EventTPC.cpp  Event_Strip.cpp  Filters.cpp  GeometryStats.cpp  GeometryTPC.cpp  Geometry_Strip.cpp  Hit2D.cpp  PEventTPC.cpp  PedestalCalculator.cpp  RunConditions.cpp  SigClusterTPC.cpp  StripTPC.cpp  Track3D.cpp  TrackSegment2D.cpp  TrackSegment3D.cpp  TrackSegmentTPC.cpp
DataFormats/test/: CMakeLists.txt  EventFilter_tst.cpp  EventInfo_tst.cpp  Filters_tst.cpp
DataFormatsTests/: CMakeLists.txt  GeometryTPCTest.cpp
EventSources/: CMakeLists.txt
EventSources/python/: convertGrawToEventTPC.py
EventSources/src/: EventSourceBase.cpp  EventSourceGRAW.cpp  EventSourceGeant4.cpp  EventSourceMC.cpp  EventSourceMultiGRAW.cpp  EventSourceROOT.cpp  UVWprojector.cpp  grawToEventTPC.cpp
EventSources/test/: CMakeLists.txt  EventTPC_tst.cpp  dataEventTPC.h  grawToEventTPC_tst.cpp
GUI/: CMakeLists.txt  LinkDef.h
GUI/config/: README.md  config_DotFinder.json  config_DotFinder_NGRAW.json  config_GUI.json  config_GUI_MC.json  config_GUI__OFFLINE.json  config_GUI__OFFLINE_100mbar_25MHz_mini_eTPC.json  config_GUI__OFFLINE_130mbar_1372Vdrift_25MHz_NGRAW.json  config_GUI__OFFLINE_130mbar_1568Vdrift_25MHz_NGRAW.json  config_GUI__OFFLINE_130mbar_1764Vdrift_25MHz_NGRAW.json  config_GUI__OFFLINE_190mbar_3332Vdrift_25MHz.json  config_GUI__OFFLINE_190mbar_3332Vdrift_25MHz_NGRAW.json  config_GUI__OFFLINE_190mbar_3626Vdrift_25MHz.json  config_GUI__OFFLINE_190mbar_3626Vdrift_25MHz_NGRAW.json  config_GUI__OFFLINE_190mbar_3920Vdrift_25MHz.json  config_GUI__OFFLINE_190mbar_3920Vdrift_25MHz_NGRAW.json  config_GUI__OFFLINE_250mbar_12.5MHz.json  config_GUI__OFFLINE_250mbar_2744Vdrift_12.5MHz.json  config_GUI__OFFLINE_250mbar_2744Vdrift_12.5MHz_NGRAW.json  config_GUI__OFFLINE_80mbar_12.5MHz.json  config_GUI__OFFLINE_80mbar_25MHz.json  config_GUI__OFFLINE_80mbar_50MHz.json  config_GUI__OFFLINE_PHYSICS_NGRAW.json  config_GUI__ONLINE_PEDESTALS.json  config_GUI__ONLINE_PHYSICS.json  config_GUI__ONLINE_PHYSICS_NGRAW.json  config_GUI__ONLINE_PULSER.json  config_GUI_fila.json  config_GUI_filter.json  mcConfig.json
GUI/include/: DataManager.h  DirectoryWatch.h  EntryDialog.h  EventSourceBase.h  EventSourceROOT.h  FileInfoFrame.h  GUI_commons.h  HistoManager.h  MainFrame.h  MarkersManager.h  RootDictLinkDef.h  RunConditionsDialog.h  ScrollFrame.h  SelectionBox.h  TrackInfoFrame.h
GUI/src/: DataManager.cpp  DirectoryWatch.cpp  EntryDialog.cpp  EventSourceBase.cpp  EventSourceROOT.cpp  FileInfoFrame.cpp  HelperLine.cpp  HistoManager.cpp  MainFrame.cpp  MarkersManager.cpp  RunConditionsDialog.cpp  ScrollFrame.cpp  SelectionBox.cpp  TrackInfoFrame.cpp
GrawToROOT/: CMakeLists.txt  README.md
GrawToROOT/include/: EventSourceGRAW.h  EventSourceMultiGRAW.h  Graw2DataFrame.h  PedestalCalculator.h  PedestalCalculatorGRAW.h
GrawToROOT/python/: convertGrawToEventTPC.py
GrawToROOT/src/: EventSourceGRAW.cpp  EventSourceMultiGRAW.cpp  Graw2DataFrame.cpp  PedestalCalculator.cpp  PedestalCalculatorGRAW.cpp  Pedestal_analysis.cpp
GrawToROOT/test/: EventTPC_tst.cpp  GeometryTPC_test.cpp  README .md  README.md  TrackSegmentTPC_test.cpp  UtilsTPC_test.cpp  test1.cpp  testEventTPCread.cpp  testEventTPCreadTChain.cpp
MonteCarlo/: CMakeLists.txt
MonteCarlo/EventGenerator/: CMakeLists.txt  README.md
MonteCarlo/Modules/: CMakeLists.txt  README.md
MonteCarlo/UtilsMC/: CMakeLists.txt  LinkDef.h
MonteCarlo/config/: EventGenerator.json  GeantConfig.json  ModuleConfig.json  ModuleConfigGun.json
MonteCarlo/examples/: CMakeLists.txt  DrawBragg.cpp  (+7 more)
Reconstruction/: CMakeLists.txt
Simulation/: CMakeLists.txt
ToyMC/: CMakeLists.txt
TrackGenerator/: CMakeLists.txt  README.md
Utilities/: CMakeLists.txt  LinkDef.h  README.md
(+407 files in other folders)
